@@ -61,6 +61,9 @@ C-API
 Library
 -------
 
+- Issue #5610: feedparser no longer eats extra characters at the end of
+  a body part if the body part ends with a \r\n.
+
 - Fix codecs.escape_encode to return the correct consumed size.
 
 - Issue #8897: Fix sunau module, use bytes to write the header. Patch written
